<resources>
    <string name="app_name">Shubham</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="num1">Num1</string>
    <string name="num2">Num2</string>
    <string name="your_result_here">Your Result Here</string>
    <string name="calculate">Calculate</string>
    <string name="spinner_activity">Spinner Activity</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="button_3">Button 3</string>
    <string name="button_4">Button 4</string>
    <string name="nothing_selected">Nothing Selected</string>
    <string name="reset_selection">Reset Selection</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="enter_price">Enter Price</string>
    <string name="get_deal">Get Deal</string>
    <string name="quantity">Quantity:</string>
    <string name="price">Price:</string>
    <string name="confirm_deal">Confirm Deal</string>
    <string name="reject">Reject Deal</string>
    <string name="click_to_capture">Click to Capture</string>
    <string name="get_image">Get Image</string>
    <string name="btn_resc">Click to display image</string>
    <string name="item_1">Item 1</string>
    <string name="item_2">Item 2</string>
    <string name="item_3">Item 3</string>
    <string name="enter_txt">Enter the Text here</string>
    <string name="range_here">Range Here</string>
    <string name="con_name">Name</string>
    <string name="phone">Phone Number</string>
    <string name="save_to_sd_card">Save to SD Card</string>
    <string name="read_from_sd_card">Read from SD Card</string>
    <string name="phone_no">Phone</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="discoverable">Discoverable</string>
    <string name="list_paired_devices">List Paired Devices</string>
    <string name="music">Play Music</string>
    <string name="stop_music">Stop Music</string>
    <string name="wifi">WiFi</string>
    <string name="set_as_wallpaper">Set As Wallpaper</string>
</resources>
