<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hpes.listofprojects.SDCardActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etConName"
        android:hint="@string/con_name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etConNum"
        android:hint="@string/phone"
        android:inputType="number"
        android:layout_below="@+id/etConName"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSaveSD"
        android:text="@string/save_to_sd_card"
        android:layout_centerVertical="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnReadSD"
        android:text="@string/read_from_sd_card"
        android:layout_below="@+id/btnSaveSD"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>

</RelativeLayout>
