<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hpes.listofprojects.DealConfirmActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/quantity"
        android:id="@+id/tvDealConfQuant"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/price"
        android:layout_below="@id/tvDealConfQuant"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/tvDealConfPrice"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_deal"
        android:layout_centerVertical="true"
        android:id="@+id/buttConf"
        android:onClick="dealStatus"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reject"
        android:layout_below="@id/buttConf"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/buttReject"
        android:onClick="dealStatus"/>

</RelativeLayout>
