<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hpes.listofprojects.ButtonActivity">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:gravity="center"
        android:id="@+id/editText"
        android:hint="@string/num1"
        android:textSize="25sp"
        android:layout_alignTop="@+id/editText2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="90dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginTop="73sp"
        android:textSize="25sp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:id="@+id/editText2"
        android:hint="@string/num2"
        android:gravity="center_horizontal"
        android:layout_toEndOf="@+id/editText"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:hint="@string/your_result_here"
        android:id="@+id/textView"
        android:gravity="center"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_centerHorizontal="true"
        android:text="@string/calculate"
        android:onClick="show"
        android:enabled="true" />
</RelativeLayout>
