<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hpes.listofprojects.DealActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/enter_quantity"
        android:id="@+id/textDeal1" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etDeal1"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:inputType="number"
        android:textSize="20sp"
        android:layout_below="@+id/textDeal1"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:textSize="20sp"
        android:text="@string/enter_price"
        android:layout_below="@+id/etDeal1"
        android:layout_centerHorizontal="true"
        android:id="@+id/textDeal2" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etDeal2"
        android:inputType="number"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textSize="20sp"
        android:layout_below="@+id/textDeal2"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonDeal1"
        android:text="@string/get_deal"
        android:layout_below="@id/etDeal2"
        android:layout_marginTop="35sp"
        android:onClick="getDeal"/>

</RelativeLayout>
